Refactor enchantment wrappers for improved task scheduling and debugging; update dependencies and configuration